--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -1,5 +1,3 @@
-@import url('normalize.css');
-@import url('demo.css');
 @font-face {
   font-family: 'entypo-selected';
   src: url("font/entypo-selected.eot");
@@ -256,7 +254,7 @@ a.rm-viewdetails:before{
 	width: 120%;
 	margin-left: -10%;
 	top: 50%;
-	padding: 40px;
+	padding: 30px;
 	background: #fff url(../images/white_paperboard.jpg);
 	box-shadow: 
 		inset 0 0 0 16px #fff, 
@@ -274,13 +272,27 @@ a.rm-viewdetails:before{
 
 .rm-modal h5 {
 	margin: 0;
-	font-size: 20px;
-	text-shadow: 1px 1px 0 #fff, 2px 2px 0 #E6B741;
+    font-size: 13px;
+    line-height: 1.69em;
+    text-shadow: 1px 1px 0 #fff, 2px 2px 0 #E6B741;
+    padding: 0px;
+    margin-bottom: 4px;
+}
+
+.rm-modal p {
+	font-size: 15px;
+	margin-bottom : 15px;
+}
+
+.rm-modal input {
+	float: right;
+    width: 46px;
+    font-size: 1em;
 }
 
 .rm-modal .rm-thumb {
-	width: 100px;
-	height: 100px;
+	width: 90px;
+	height: 90px;
 	background-repeat: no-repeat;
 	background-position: center center;
 	float: left;
@@ -301,7 +313,12 @@ a.rm-viewdetails,
 
 .rm-modal a {
 	float: right;
-	clear: both;
+    clear: both;
+    margin-top: 8px;
+    background: #ff4d00;
+    padding: 6px;
+    color: #fff;
+    font-size: 13px;
 }
 
 a.rm-viewdetails:hover,
