--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -116,6 +116,7 @@
 
 .rm-content {
 	padding: 20px;
+	padding-top : 0px;
 }
 
 .rm-logo, 
@@ -160,7 +161,7 @@ a.rm-button-open,
     font-weight: 500;
     border-top: 4px double #323b4c;
     text-transform: uppercase;
-    line-height: 53px;
+    line-height: 45px;
 	text-shadow: 1px 1px 0 rgba(255,255,255,0.8);
 }
 
@@ -189,7 +190,7 @@ a.rm-button-open {
 	background: #ff4d00;
     background-size: cover;
     border-radius: 50%;
-    padding: 2.5em 2em;
+    padding: 1.5em 2em;
 }
 
 a.rm-button-open:hover {
