--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -186,6 +186,7 @@ a.rm-button-open {
 	margin: 10px auto;
 	display: block;
 	font-family : Tahoma;
+	font-weight : normal;
 	text-shadow: 0 1px 0 rgba(255,255,255,0.8);
 	background: #ff4d00;
     background-size: cover;
@@ -196,6 +197,7 @@ a.rm-button-open {
 a.rm-button-open:hover {
 	color: #ffa709;
 	font-weight : normal;
+	text-shadow: 0 1px 0 rgba(0,0,0,0.8);
 }
 
 .rm-info p {
