--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -109,7 +109,8 @@ a:focus {
 	color: #222;
 	font-size: 0.9em;
 	font-weight: bold;
-	padding-right : 10px;
+	padding-right : 5px;
+	padding-left : 5px;
 	cursor : pointer;
 }
 
