improving the project.

--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -114,6 +114,10 @@ a:focus {
 	cursor : pointer;
 }
 
+.user span {
+	font-family : Tahoma;
+}
+
 /*-- //banner-body --*/
 /*-- banner --*/
 .banner-left,.banner-right{
