improving the project.

--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -170,6 +170,9 @@ a:focus {
     list-style: none;
     margin-top : 20px;
 }
+ul.cute {
+	margin-left: -10px;
+}
 ul.cute li{
 	list-style-type:none;
 	margin:0 0 .5em;
