--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -431,7 +431,7 @@ fieldset:before{
 
 .cart {
 	position: relative;
-    margin-top: -415px;
+    margin-top: -360px;
     float: right;
     right: 125px;
     font-family: Tahoma;
@@ -656,6 +656,7 @@ fieldset:before{
 	font-size : 12px;
 	text-decoration: none;
 	border-color: #666;
+	margin-left : 5px;
 }
 
 .shoppingCart li a:hover {
@@ -795,6 +796,7 @@ fieldset:before{
 	-moz-transition: opacity 0.6s;
 	-o-transition: opacity 0.6s;
 	transition: opacity 0.6s;
+	cursor : pointer;
 }
 
 .checkout:focus {
