improving the project.

--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -195,7 +195,7 @@ a.rm-button-open {
 }
 
 a.rm-button-open:hover {
-	color: #ffa709;
+	color: #fff;
 	font-weight : normal;
 	text-shadow: 0 1px 0 rgba(0,0,0,0.8);
 }
