--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -246,10 +246,12 @@ a.rm-button-open:hover {
 }
 
 .rm-order p{
-	padding: 10px;
-	background: rgba(213, 193, 154, 0.2);
-	margin: 20px 0 0;
-	font-size : 14px;
+	padding: 15px;
+    background: rgba(213, 193, 154, 0.2);
+    margin: 60px 0 0;
+    font-size: 13px;
+    font-family: Arial;
+    border-radius: 20px;
 }
 
 .rm-order img {
