--- a/WebContent/templates/fodder/css/menu.css
+++ b/WebContent/templates/fodder/css/menu.css
@@ -1,15 +1,3 @@
-@font-face {
-  font-family: 'entypo-selected';
-  src: url("font/entypo-selected.eot");
-  src: 
-	url("font/entypo-selected.eot?#iefix") format('embedded-opentype'), 
-	url("font/entypo-selected.woff") format('woff'), 
-	url("font/entypo-selected.ttf") format('truetype'), 
-	url("font/entypo-selected.svg#entypo-selected") format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-
 .rm-container {
 	width: 33%;
 	height: 960px;
@@ -166,12 +154,12 @@ a.rm-button-open,
 
 .rm-content h4 {
 	margin: 0 0 10px 0;
-	font-size: 16px;
-	padding-bottom: 10px;
-	color: #323b4c;
-	border-bottom: 4px double #ff4d00;
-	text-shadow: 1px 1px 0 #fff, 2px 2px 0 #E6B741;
-	letter-spacing: 2px;
+    font-size: 15px;
+    padding: 10px;
+    color: #323b4c;
+    letter-spacing: 2px;
+    font-family: Courgette;
+    background: #ffa709;
 }
 
 .rm-content h4:not(:first-child) {
@@ -248,11 +236,28 @@ a.rm-button-open:hover {
 .rm-order p{
 	padding: 15px;
     background: rgba(213, 193, 154, 0.2);
-    margin: 60px 0 0;
+    margin: 50px 0 0;
     font-size: 13px;
     font-family: Arial;
     border-radius: 20px;
 }
+
+.rm-order p > span {
+	display: block;
+    font-size: 12px;
+    line-height: 1.6em;
+}
+
+.rm-order p > span:first-of-type {
+	margin-top: 8px;
+}
+
+.rm-order p > span span {
+	display : inline-block;
+	width : 70px;
+	text-align : right;
+}
+
 
 .rm-order img {
 	margin-top : 200px;
@@ -359,7 +364,7 @@ a.rm-viewdetails:hover,
 	opacity: 0;
 	right: 30px;
 	cursor: pointer;
-	font-family : Tahoma;
+	font-family : Arial Black;
 }
 
 .rm-close-modal {
