--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -958,10 +958,72 @@ fieldset{
 	color : #fff;
 }
 
-
 .shoppingCart:hover .checkout {
 	opacity: 1;
 }
+
+#checkout-wizard {
+	display : none;
+	width : 100%;
+	position: absolute;
+}
+
+.checkout-wizard-content {
+    margin-left: auto;
+    margin-right: auto;
+    width: 82%;
+    min-height: 500px;
+    background: #fff;
+    padding: 10px;
+}
+
+.checkout-wizard-steps {
+	clear : both;
+	padding : 20px;
+	min-height : 440px;
+	position: relative;
+    top: 0px;
+	box-shadow: 
+		inset 0 0 0 16px #fff, 
+		inset 0 0 0 17px #ffa709, 
+		inset 0 0 0 18px #fff, 
+		inset 0 0 0 19px #ffa709, 
+		inset 0 0 0 20px #fff, 
+		inset 0 0 0 21px #ffa709;
+}
+
+
+.wizard-title {
+	text-transform: capitalize;
+    float: left;
+    display: inline-block;
+    color: #ff8d00;
+    font-size: 20px;
+    font-family: Tahoma;
+    font-weight: bold;
+    position: relative;
+    left: 4px;
+    padding: 7px;
+}
+
+
+.wizard-close {
+	text-transform: uppercase;
+    float: right;
+    display: inline-block;
+    color: #fff;
+    font-size: 25px;
+    font-weight: 500;
+    line-height: 15px;
+    position : relative;
+    right: 15px;
+    cursor: pointer;
+    font-family: Arial Black;
+    background: #000;
+    padding: 9px;
+    border-radius: 10px;
+}
+
 
 /* commande */
 
