--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -509,19 +509,31 @@ h4 .fa {
     top:78%;
     right:0%;
 }
-fieldset{
-	padding: 1.5em;
+.about-main fieldset{
+	padding: 2.5em;
     color: #111000;
-    font-size: 19px;
-    line-height: 1.8em;
     width: 80%;
     position: relative;
     margin: auto;
     margin-bottom: 1em;
-    border: 2px solid #ff4d00;
-    text-align: justify;
-    font-family: Tahoma;
+    border: 1px solid #ff4d00;
+    background: #fdfdfd url(../images/white_paperboard.jpg);
+    box-shadow: 
+		inset 0 0 0 16px #fff, 
+		inset 0 0 0 17px #ffa709, 
+		inset 0 0 0 18px #fff, 
+		inset 0 0 0 19px #ffa709, 
+		inset 0 0 0 20px #fff, 
+		inset 0 0 0 21px #ffa709;
 }
+
+.about-main fieldset p {
+   font-family: Courgette;
+   line-height: 2.2em;
+   font-size: 16px;
+   text-align: justify;
+}
+
 /*-- //about --*/
 .mnu1{
 	padding:0 1em 0.2em;
@@ -968,6 +980,22 @@ fieldset{
 	margin-top : 15px;
 }
 
+#checkout-wizard fieldset{
+	padding: 1.5em;
+    color: #111000;
+    font-size: 19px;
+    line-height: 1.8em;
+    width: 80%;
+    position: relative;
+    margin: auto;
+    margin-bottom: 1em;
+    border: 2px solid #ff4d00;
+    text-align: justify;
+    font-family: Tahoma;
+    background : #fdfdfd;
+}
+
+
 .checkout-wizard-content {
     margin-left: auto;
     margin-right: auto;
@@ -1082,7 +1110,7 @@ fieldset{
     color: white;
     height: 34px;
     font-family: Tahoma;
-    font-size: 14px;
+    font-size: 16px;
 } 
 .easyWizardButtons .next, .easyWizardButtons .submit {
    float:right;
@@ -1098,10 +1126,8 @@ fieldset{
     color: white;
     height: 34px;
     font-family: Tahoma;
-    font-size: 14px;
+    font-size: 16px;
 }
-
-
 
 
 /* commande */
