--- a/WebContent/templates/fodder/css/template.css
+++ b/WebContent/templates/fodder/css/template.css
@@ -1027,12 +1027,12 @@ h4 .fa {
 }
 
 .checkout-wizard-content fieldset label{
-	font-size: 0.8em;
+	font-size: 0.85em;
     position: relative;
     top: -1px;
-    font-family: verdana;
+    font-family: Arial;
     letter-spacing: 0;
-    color : #903417;
+    color: #903417;
 }
 
 
@@ -1043,6 +1043,7 @@ h4 .fa {
 	width : 100%;
 	position: relative;
     top: 0px;
+    background : #fcf8e3;
 	box-shadow: 
 		inset 0 0 0 16px #fff, 
 		inset 0 0 0 17px #ffa709, 
@@ -1109,6 +1110,7 @@ h4 .fa {
     background: #ff4d00;
     color: white;
     height: 34px;
+    width : 100px;
     font-family: Tahoma;
     font-size: 16px;
 } 
@@ -1125,6 +1127,7 @@ h4 .fa {
     background: #ff4d00;
     color: white;
     height: 34px;
+    width : 100px;
     font-family: Tahoma;
     font-size: 16px;
 }
